--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <section id="home" class="hero-bg min-h-screen flex items-center pt-20">
             <div class="container mx-auto px-6 text-center text-white">
                 <h1 class="text-4xl md:text-6xl font-extrabold leading-tight">Travel Smarter. Stay Safer.</h1>
-                <p class="mt-4 text-lg md:text-xl max-w-3xl mx-auto text-slate-200">Your personal safety companion for exploring South Africa. Get real-time crime statistics and community alerts right on your phone.</p>
+                <p class="mt-4 text-lg md:text-xl max-w-3xl mx-auto text-slate-200">Your personal safety companion for exploring South Africa. Get real-time crime statistics and verified safety alerts right on your phone.</p>
                 <div class="mt-8 flex justify-center items-center space-x-4">
                     <a href="https://apps.apple.com/za/app/crimehawk/id6584519575" target="_blank" rel="noopener noreferrer" class="hero-button text-white font-semibold px-6 py-3 rounded-xl flex items-center justify-center magnetic-button">
                         <span class="magnetic-content inline-flex items-center justify-center space-x-3 transition-transform duration-200 ease-out">
@@ -303,7 +303,7 @@
                                 <p class="text-sm text-slate-500 dark:text-slate-400">Local Explorer</p>
                             </div>
                         </div>
-                        <p class="text-slate-600 dark:text-slate-300">"Even as a local, I've discovered so much about my own city. The community reports are fantastic for knowing what's happening right now."</p>
+                        <p class="text-slate-600 dark:text-slate-300">"Even as a local, I've discovered so much about my own city. The incident reports are fantastic for knowing what's happening right now."</p>
                     </div>
                 </div>
             </div>
