--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
              background: radial-gradient(ellipse at top, #1e293b, #020617); /* Dark mode gradient */
         }
         .hero-bg {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('Gemini_Generated_Image_9z5lpj9z5lpj9z5l.png');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://images.unsplash.com/photo-1579933521633-abc40735de62?q=80&w=2940&auto-format&fit=crop');
             background-size: cover;
             background-position: center 20%; /* Moved the image up */
         }
@@ -129,7 +129,7 @@
                     <a href="#features" class="text-slate-600 dark:text-slate-300 hover:text-red-600 dark:hover:text-red-500 transition-colors">Features</a>
                     <a href="#testimonials" class="text-slate-600 dark:text-slate-300 hover:text-red-600 dark:hover:text-red-500 transition-colors">Testimonials</a>
                     <a href="#about" class="text-slate-600 dark:text-slate-300 hover:text-red-600 dark:hover:text-red-500 transition-colors">About</a>
-                    <a href="contact.html" class="text-slate-600 dark:text-slate-300 hover:text-red-600 dark:hover:text-red-500 transition-colors">Contact</a>
+                    <a href="contact/" class="text-slate-600 dark:text-slate-300 hover:text-red-600 dark:hover:text-red-500 transition-colors">Contact</a>
                 </nav>
                 <a href="#download" class="hidden md:inline-block bg-red-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-red-700 magnetic-button">
                     <span class="magnetic-content inline-block transition-transform duration-200 ease-out">Download App</span>
@@ -149,7 +149,7 @@
             <a href="#features" class="block py-2 text-slate-600 dark:text-slate-300 hover:text-red-600 dark:hover:text-red-500">Features</a>
             <a href="#testimonials" class="block py-2 text-slate-600 dark:text-slate-300 hover:text-red-600 dark:hover:text-red-500">Testimonials</a>
             <a href="#about" class="block py-2 text-slate-600 dark:text-slate-300 hover:text-red-600 dark:hover:text-red-500">About</a>
-            <a href="contact.html" class="block py-2 text-slate-600 dark:text-slate-300 hover:text-red-600 dark:hover:text-red-500">Contact</a>
+            <a href="contact/" class="block py-2 text-slate-600 dark:text-slate-300 hover:text-red-600 dark:hover:text-red-500">Contact</a>
             <a href="#download" class="block mt-4 w-full text-center bg-red-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-red-700">Download App</a>
         </div>
     </header>
@@ -356,9 +356,9 @@
     <footer class="bg-slate-900 text-slate-400 py-12">
         <div class="container mx-auto px-6 text-center">
             <div class="flex justify-center space-x-6 mb-6">
-                <a href="contact.html" class="hover:text-white transition-colors">Contact Us</a>
-                <a href="privacy.html" class="hover:text-white transition-colors">Privacy Policy</a>
-                <a href="terms.html" class="hover:text-white transition-colors">Terms & Conditions</a>
+                <a href="contact/" class="hover:text-white transition-colors">Contact Us</a>
+                <a href="privacy-policy/" class="hover:text-white transition-colors">Privacy Policy</a>
+                <a href="terms-conditions/" class="hover:text-white transition-colors">Terms & Conditions</a>
             </div>
             <p class="text-sm">A product of Skeep Technologies (Pty) Ltd.</p>
             <p class="text-sm mt-2">&copy; 2025 TravelHawk. All rights reserved.</p>
@@ -487,4 +487,5 @@
     </script>
 </body>
 </html>
+
 
