--- a/contact/index.html
+++ b/contact/index.html
@@ -64,13 +64,13 @@
      <!-- Header & Navigation -->
     <header class="bg-white/80 dark:bg-slate-950/80 backdrop-blur-lg sticky top-0 left-0 right-0 z-50 border-b border-slate-200 dark:border-slate-800">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="index.html" class="flex items-center space-x-2">
-                <img src="Untitled%20design%20(9).png" alt="TravelHawk Logo" class="w-10 h-10">
+            <a href="../index.html" class="flex items-center space-x-2">
+                <img src="../Untitled%20design%20(9).png" alt="TravelHawk Logo" class="w-10 h-10">
                 <span class="text-2xl font-bold text-slate-800 dark:text-white">TravelHawk</span>
             </a>
             <div class="flex items-center space-x-4">
                  <nav class="hidden md:flex items-center space-x-8">
-                    <a href="index.html" class="text-slate-600 dark:text-slate-300 hover:text-red-600 dark:hover:text-red-500 transition-colors">Home</a>
+                    <a href="../index.html" class="text-slate-600 dark:text-slate-300 hover:text-red-600 dark:hover:text-red-500 transition-colors">Home</a>
                 </nav>
                 <button id="theme-toggle" class="text-slate-600 dark:text-slate-300 hover:text-red-600 dark:hover:text-red-500 transition-colors">
                     <i data-lucide="sun" class="w-6 h-6 hidden dark:inline"></i>
@@ -113,12 +113,12 @@
         </div>
     </main>
     
-    <footer class="bg-slate-800 text-slate-400 py-12 mt-16 md:mt-24">
+    <footer class="bg-slate-900 text-slate-400 py-12 mt-16 md:mt-24">
         <div class="container mx-auto px-6 text-center">
             <div class="flex justify-center space-x-6 mb-6">
-                <a href="contact.html" class="hover:text-white transition-colors">Contact Us</a>
-                <a href="privacy.html" class="hover:text-white transition-colors">Privacy Policy</a>
-                <a href="terms.html" class="hover:text-white transition-colors">Terms & Conditions</a>
+                <a href="../contact/" class="hover:text-white transition-colors">Contact Us</a>
+                <a href="../privacy-policy/" class="hover:text-white transition-colors">Privacy Policy</a>
+                <a href="../terms-conditions/" class="hover:text-white transition-colors">Terms & Conditions</a>
             </div>
             <p class="text-sm">A product of Skeep Technologies (Pty) Ltd.</p>
             <p class="text-sm mt-2">&copy; 2025 TravelHawk. All rights reserved.</p>
