--- a/terms-conditions/index.html
+++ b/terms-conditions/index.html
@@ -103,14 +103,14 @@
     <!-- Header & Navigation -->
     <header class="bg-white/80 dark:bg-slate-950/80 backdrop-blur-lg sticky top-0 left-0 right-0 z-50 border-b border-slate-200 dark:border-slate-800">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="index.html" class="flex items-center space-x-2">
-                <img src="Untitled%20design%20(9).png" alt="TravelHawk Logo" class="w-10 h-10">
+            <a href="../index.html" class="flex items-center space-x-2">
+                <img src="../Untitled%20design%20(9).png" alt="TravelHawk Logo" class="w-10 h-10">
                 <span class="text-2xl font-bold text-slate-800 dark:text-white">TravelHawk</span>
             </a>
             <div class="flex items-center space-x-4">
                  <nav class="hidden md:flex items-center space-x-8">
-                    <a href="index.html" class="text-slate-600 dark:text-slate-300 hover:text-red-600 dark:hover:text-red-500 transition-colors">Home</a>
-                    <a href="contact.html" class="text-slate-600 dark:text-slate-300 hover:text-red-600 dark:hover:text-red-500 transition-colors">Contact</a>
+                    <a href="../index.html" class="text-slate-600 dark:text-slate-300 hover:text-red-600 dark:hover:text-red-500 transition-colors">Home</a>
+                    <a href="../contact/" class="text-slate-600 dark:text-slate-300 hover:text-red-600 dark:hover:text-red-500 transition-colors">Contact</a>
                 </nav>
                 <button id="theme-toggle" class="text-slate-600 dark:text-slate-300 hover:text-red-600 dark:hover:text-red-500 transition-colors">
                     <i data-lucide="sun" class="w-6 h-6 hidden dark:inline"></i>
@@ -139,7 +139,7 @@
             <p>The App is provided for informational purposes only. All content is provided to you on a read-only basis.</p>
 
             <h2>3. Privacy Policy</h2>
-            <p>Your privacy is important to us. Our <a href="privacy.html">Privacy Policy</a> details how we collect, use, and protect your information. By using our App, you agree to the collection and use of information in accordance with our Privacy Policy. This includes the collection of anonymized analytics and usage data to improve our services and measure the effectiveness of our advertising, as detailed in the policy. Please review our Privacy Policy carefully.</p>
+            <p>Your privacy is important to us. Our <a href="../privacy-policy/">Privacy Policy</a> details how we collect, use, and protect your information. By using our App, you agree to the collection and use of information in accordance with our Privacy Policy. This includes the collection of anonymized analytics and usage data to improve our services and measure the effectiveness of our advertising, as detailed in the policy. Please review our Privacy Policy carefully.</p>
             
             <h2>4. Location-Based Services</h2>
             <p>To provide relevant safety information, the App utilizes location-based services. By using the App, you consent to our use of your device's location data as described in our Privacy Policy. You can disable location services in your device's settings at any time, but be aware that doing so will significantly limit the App's functionality and its ability to provide location-specific alerts.</p>
@@ -174,9 +174,9 @@
     <footer class="bg-slate-900 text-slate-400 py-12">
         <div class="container mx-auto px-6 text-center">
             <div class="flex justify-center space-x-6 mb-6">
-                <a href="contact.html" class="hover:text-white transition-colors">Contact Us</a>
-                <a href="privacy.html" class="hover:text-white transition-colors">Privacy Policy</a>
-                <a href="terms.html" class="hover:text-white transition-colors">Terms & Conditions</a>
+                <a href="../contact/" class="hover:text-white transition-colors">Contact Us</a>
+                <a href="../privacy-policy/" class="hover:text-white transition-colors">Privacy Policy</a>
+                <a href="../terms-conditions/" class="hover:text-white transition-colors">Terms & Conditions</a>
             </div>
             <p class="text-sm">A product of Skeep Technologies (Pty) Ltd.</p>
             <p class="text-sm mt-2">&copy; 2025 TravelHawk. All rights reserved.</p>
@@ -214,4 +214,3 @@
     </script>
 </body>
 </html>
-
