--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
              background: radial-gradient(ellipse at top, #1e293b, #020617); /* Dark mode gradient */
         }
         .hero-bg {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://images.unsplash.com/photo-1579933521633-abc40735de62?q=80&w=2940&auto-format&fit=crop');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('Gemini_Generated_Image_9z5lpj9z5lpj9z5l.png');
             background-size: cover;
             background-position: center 20%; /* Moved the image up */
         }
