--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travelhawk - Travel Smarter. Stay Safer.</title>
+    <title>TravelHawk - Travel Smarter. Stay Safer.</title>
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -112,8 +112,8 @@
     <header class="bg-white/80 dark:bg-slate-950/80 backdrop-blur-lg fixed top-0 left-0 right-0 z-50 border-b border-slate-200 dark:border-slate-800">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="index.html" class="flex items-center space-x-2">
-                <img src="Untitled%20design%20(9).png" alt="Travelhawk Logo" class="w-10 h-10">
-                <span class="text-2xl font-bold text-slate-800 dark:text-white">Travelhawk</span>
+                <img src="Untitled%20design%20(9).png" alt="TravelHawk Logo" class="w-10 h-10">
+                <span class="text-2xl font-bold text-slate-800 dark:text-white">TravelHawk</span>
             </a>
             <div class="flex items-center space-x-4">
                 <nav class="hidden md:flex items-center space-x-8">
@@ -202,13 +202,13 @@
         <section id="features" class="py-20 bg-white dark:bg-slate-900">
             <div class="container mx-auto px-6">
                 <h2 class="section-title scroll-animate opacity-0 translate-y-5 transition-all duration-700 ease-out animated-title">Know Before You Go</h2>
-                <p class="section-subtitle scroll-animate opacity-0 translate-y-5 transition-all duration-700 ease-out" style="transition-delay: 100ms;">Travelhawk equips you with the tools you need to make informed decisions and explore with confidence.</p>
+                <p class="section-subtitle scroll-animate opacity-0 translate-y-5 transition-all duration-700 ease-out" style="transition-delay: 100ms;">TravelHawk equips you with the tools you need to make informed decisions and explore with confidence.</p>
                 <div class="mt-16 grid md:grid-cols-2 gap-16 items-center">
                     <div class="relative scroll-animate opacity-0 translate-y-5 transition-all duration-700 ease-out app-screenshot-container" style="transition-delay: 200ms;">
                        <!-- App Screenshots -->
-                       <img src="IMG_0961.PNG" alt="Travelhawk app displaying detailed crime statistics for a precinct" class="app-screenshot app-screenshot-2">
-                       <img src="IMG_0960.PNG" alt="Travelhawk app showing a color-coded safety map of Cape Town" class="app-screenshot app-screenshot-1">
-                       <img src="IMG_0962.PNG" alt="Travelhawk app showing a real-time community safety alert" class="app-screenshot app-screenshot-3">
+                       <img src="IMG_0961.PNG" alt="TravelHawk app displaying detailed crime statistics for a precinct" class="app-screenshot app-screenshot-2">
+                       <img src="IMG_0960.PNG" alt="TravelHawk app showing a color-coded safety map of Cape Town" class="app-screenshot app-screenshot-1">
+                       <img src="IMG_0962.PNG" alt="TravelHawk app showing a real-time community safety alert" class="app-screenshot app-screenshot-3">
                     </div>
                     <div class="space-y-10 scroll-animate opacity-0 translate-y-5 transition-all duration-700 ease-out" style="transition-delay: 300ms;">
                         <div class="flex items-start space-x-4">
@@ -222,7 +222,7 @@
                             <div><i data-lucide="check-check" class="w-10 h-10 text-red-600 dark:text-red-500 mb-4"></i></div>
                             <div>
                                 <h3 class="text-xl font-bold text-slate-800 dark:text-white">Verified Incident Reports</h3>
-                                <p class="mt-1 text-slate-600 dark:text-slate-400">Stay informed with up-to-the-minute incident reports curated and verified by the Travelhawk team.</p>
+                                <p class="mt-1 text-slate-600 dark:text-slate-400">Stay informed with up-to-the-minute incident reports curated and verified by the TravelHawk team.</p>
                             </div>
                         </div>
                          <div class="flex items-start space-x-4">
@@ -273,7 +273,7 @@
                                 <p class="text-sm text-slate-500 dark:text-slate-400">Cape Town Visitor</p>
                             </div>
                         </div>
-                        <p class="text-slate-600 dark:text-slate-300">"As a solo traveler, Travelhawk was a game-changer. I felt so much more aware of my surroundings and could plan my days with confidence. A must-have app!"</p>
+                        <p class="text-slate-600 dark:text-slate-300">"As a solo traveler, TravelHawk was a game-changer. I felt so much more aware of my surroundings and could plan my days with confidence. A must-have app!"</p>
                     </div>
                     <div class="bg-white dark:bg-slate-800 p-8 rounded-lg shadow-lg dark:shadow-black/20 scroll-animate opacity-0 translate-y-5 transition-all duration-700 ease-out interactive-card dark:hover:bg-slate-700" style="transition-delay: 300ms;">
                         <div class="flex items-center mb-4">
@@ -303,7 +303,7 @@
         <section id="about" class="py-20 bg-white dark:bg-slate-900">
             <div class="container mx-auto px-6 text-center">
                  <h2 class="section-title scroll-animate opacity-0 translate-y-5 transition-all duration-700 ease-out animated-title">Our Mission</h2>
-                 <p class="section-subtitle scroll-animate opacity-0 translate-y-5 transition-all duration-700 ease-out" style="transition-delay: 100ms;">We believe that everyone has the right to feel safe and informed while exploring the beauty of South Africa. Travelhawk was born from a desire to empower travellers and residents with transparent, accessible, and real-time safety information. We're dedicated to building a community that looks out for one another, one alert at a time.</p>
+                 <p class="section-subtitle scroll-animate opacity-0 translate-y-5 transition-all duration-700 ease-out" style="transition-delay: 100ms;">We believe that everyone has the right to feel safe and informed while exploring the beauty of South Africa. TravelHawk was born from a desire to empower travellers and residents with transparent, accessible, and real-time safety information. We're dedicated to building a community that looks out for one another, one alert at a time.</p>
                  <div class="mt-12 inline-flex flex-col md:flex-row space-y-8 md:space-y-0 md:space-x-12 scroll-animate opacity-0 translate-y-5 transition-all duration-700 ease-out" style="transition-delay: 200ms;">
                      <div class="flex flex-col items-center">
                          <img src="ID%20Document.pdf%20(19).png" alt="Mohau Mofokeng" class="w-32 h-32 rounded-full shadow-lg object-cover">
@@ -323,7 +323,7 @@
         <section id="download" class="py-20 bg-red-600">
              <div class="container mx-auto px-6 text-center text-white">
                 <h2 class="text-3xl md:text-4xl font-bold animated-title">Ready to Explore with Confidence?</h2>
-                <p class="mt-4 text-lg md:text-xl max-w-3xl mx-auto text-red-100">Download Travelhawk today and join a community committed to safer travel.</p>
+                <p class="mt-4 text-lg md:text-xl max-w-3xl mx-auto text-red-100">Download TravelHawk today and join a community committed to safer travel.</p>
                 <div class="mt-8 flex justify-center items-center space-x-4">
                      <a href="https://apps.apple.com/za/app/crimehawk/id6584519575" target="_blank" rel="noopener noreferrer" class="magnetic-button">
                         <span class="magnetic-content inline-block transition-transform duration-200 ease-out">
@@ -349,7 +349,7 @@
                 <a href="terms-conditions/" class="hover:text-white transition-colors">Terms & Conditions</a>
             </div>
             <p class="text-sm">A product of Skeep Technologies (Pty) Ltd.</p>
-            <p class="text-sm mt-2">&copy; 2025 Travelhawk. All rights reserved.</p>
+            <p class="text-sm mt-2">&copy; 2025 TravelHawk. All rights reserved.</p>
         </div>
     </footer>
 
