--- a/home/index.html
+++ b/home/index.html
@@ -190,7 +190,7 @@
                             <i data-lucide="shield-alert" class="w-10 h-10 text-red-600 dark:text-red-500"></i>
                         </div>
                         <h3 class="mt-6 text-xl font-bold text-slate-800 dark:text-white">3. Receive Alerts</h3>
-                        <p class="mt-2 text-slate-600 dark:text-slate-400">Get notified about crime hotspots and community reports in your area.</p>
+                        <p class="mt-2 text-slate-600 dark:text-slate-400">Get notified about crime hotspots and incident reports in your area.</p>
                     </div>
                 </div>
             </div>
@@ -265,7 +265,7 @@
                 <div class="mt-12 grid md:grid-cols-3 gap-8">
                     <div class="bg-white dark:bg-slate-800 p-8 rounded-lg shadow-lg dark:shadow-black/20 scroll-animate opacity-0 translate-y-5 transition-all duration-700 ease-out interactive-card dark:hover:bg-slate-700" style="transition-delay: 200ms;">
                         <div class="flex items-center mb-4">
-                            <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?q=80&w=96&h=96&auto-format&fit=crop" alt="User Avatar" class="w-12 h-12 rounded-full mr-4 object-cover">
+                            <img src="../jenna.png" alt="User Avatar" class="w-12 h-12 rounded-full mr-4 object-cover">
                             <div>
                                 <p class="font-bold text-slate-800 dark:text-white">Jenna S.</p>
                                 <p class="text-sm text-slate-500 dark:text-slate-400">Cape Town Visitor</p>
@@ -275,7 +275,7 @@
                     </div>
                     <div class="bg-white dark:bg-slate-800 p-8 rounded-lg shadow-lg dark:shadow-black/20 scroll-animate opacity-0 translate-y-5 transition-all duration-700 ease-out interactive-card dark:hover:bg-slate-700" style="transition-delay: 300ms;">
                         <div class="flex items-center mb-4">
-                            <img src="https://images.unsplash.com/photo-1539571696357-5a69c17a67c6?q=80&w=96&h=96&auto-format&fit=crop" alt="User Avatar" class="w-12 h-12 rounded-full mr-4 object-cover">
+                            <img src="../mark.png" alt="User Avatar" class="w-12 h-12 rounded-full mr-4 object-cover">
                             <div>
                                 <p class="font-bold text-slate-800 dark:text-white">Mark K.</p>
                                 <p class="text-sm text-slate-500 dark:text-slate-400">Business Traveller</p>
@@ -291,7 +291,7 @@
                                 <p class="text-sm text-slate-500 dark:text-slate-400">Local Explorer</p>
                             </div>
                         </div>
-                        <p class="text-slate-600 dark:text-slate-300">"Even as a local, I've discovered so much about my own city. The incident reports are fantastic for knowing what's happening right now."</p>
+                        <p class="text-slate-600 dark:text-slate-300">"Even as a local, I've discovered so much about my own city. The incident reports are fantastic for knowing what's happening now."</p>
                     </div>
                 </div>
             </div>
