--- a/home/index.html
+++ b/home/index.html
@@ -291,7 +291,7 @@
                                 <p class="text-sm text-slate-500 dark:text-slate-400">Local Explorer</p>
                             </div>
                         </div>
-                        <p class="text-slate-600 dark:text-slate-300">"Even as a local, I've discovered so much about my own city. The incident reports are fantastic for knowing what's happening now."</p>
+                        <p class="text-slate-600 dark:text-slate-300">"Even as a local, I've discovered so much about my own city. The incident reports are fantastic for knowing what's happening around me."</p>
                     </div>
                 </div>
             </div>
