--- a/home/index.html
+++ b/home/index.html
@@ -97,17 +97,57 @@
             -moz-appearance: none;
             appearance: none;
             background-color: transparent;
-            padding: 0.5rem 2rem 0.5rem 1rem;
-            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%2364748b' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
-            background-position: right 0.5rem center;
-            background-repeat: no-repeat;
-            background-size: 1.5em 1.5em;
+            padding-left: 2.25rem; /* Space for the globe icon */
+            padding-right: 2rem; /* Space for the dropdown arrow */
+            padding-top: 0.5rem;
+            padding-bottom: 0.5rem;
+
+            /* Add two background images: globe and dropdown arrow */
+            background-image: 
+                url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='%23475569' %3e%3cpath stroke-linecap='round' stroke-linejoin='round' d='M12 21a9.004 9.004 0 008.716-6.747M12 21a9.004 9.004 0 01-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 017.843 4.582M12 3a8.997 8.997 0 00-7.843 4.582m15.686 0A11.953 11.953 0 0112 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0121 12c0 .778-.099 1.533-.284 2.253m0 0A17.919 17.919 0 0112 16.5c-3.162 0-6.133-.815-8.716-2.247m0 0A9.015 9.015 0 013 12c0-1.605.42-3.113 1.157-4.418' /%3e%3c/svg%3e"),
+                url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%2364748b' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
+            
+            background-position: left 0.5rem center, right 0.5rem center;
+            background-repeat: no-repeat, no-repeat;
+            background-size: 1.25em 1.25em, 1.5em 1.5em;
+
             border-radius: 0.5rem;
             border: 1px solid #cbd5e1; /* slate-300 */
+            transition: width 0.3s ease-in-out, color 0.3s ease-in-out;
+
+            /* Mobile styles */
+            color: transparent; /* Hide text */
+            width: 56px; /* A bit wider to accommodate globe icon */
         }
+
+        /* Desktop styles */
+        @media (min-width: 768px) {
+            #language-selector {
+                color: #475569; /* slate-600 */
+                width: auto;
+                padding-left: 1rem; /* Restore padding */
+                /* Only show dropdown arrow on desktop */
+                background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%2364748b' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
+                background-position: right 0.5rem center;
+                background-size: 1.5em 1.5em;
+            }
+        }
+        
         html.dark #language-selector {
              border-color: #475569; /* slate-600 */
-             background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%2394a3b8' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
+             /* Dark mode icons */
+             background-image: 
+                url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='%2394a3b8' %3e%3cpath stroke-linecap='round' stroke-linejoin='round' d='M12 21a9.004 9.004 0 008.716-6.747M12 21a9.004 9.004 0 01-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 017.843 4.582M12 3a8.997 8.997 0 00-7.843 4.582m15.686 0A11.953 11.953 0 0112 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0121 12c0 .778-.099 1.533-.284 2.253m0 0A17.919 17.919 0 0112 16.5c-3.162 0-6.133-.815-8.716-2.247m0 0A9.015 9.015 0 013 12c0-1.605.42-3.113 1.157-4.418' /%3e%3c/svg%3e"),
+                url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%2394a3b8' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
+        }
+
+        /* Desktop dark mode styles */
+        @media (min-width: 768px) {
+            html.dark #language-selector {
+                color: #d1d5db; /* slate-300 */
+                /* Only show dropdown arrow on desktop */
+                background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%2394a3b8' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
+            }
         }
     </style>
     <script>
@@ -143,7 +183,7 @@
                 </a>
                  <!-- Language Selector -->
                 <div class="relative">
-                     <select id="language-selector" class="text-slate-600 dark:text-slate-300 bg-transparent dark:bg-slate-900/80"></select>
+                     <select id="language-selector" class="bg-transparent dark:bg-slate-900/80"></select>
                 </div>
                 <button id="theme-toggle" class="text-slate-600 dark:text-slate-300 hover:text-red-600 dark:hover:text-red-500 transition-colors">
                     <i data-lucide="sun" class="w-6 h-6 hidden dark:inline"></i>
