Added sources page

--- a/terms-conditions/index.html
+++ b/terms-conditions/index.html
@@ -147,18 +147,20 @@
         </div>
     </main>
 
+    <!-- Footer -->
     <footer class="bg-slate-900 text-slate-400 py-12">
         <div class="container mx-auto px-6 text-center">
-            <div class="flex justify-center space-x-6 mb-6">
+            <div class="flex justify-center flex-wrap gap-x-6 gap-y-2 mb-6">
                 <a href="../contact/" class="hover:text-white transition-colors" data-i18n-key="footerContact">Contact Us</a>
                 <a href="../privacy-policy/" class="hover:text-white transition-colors" data-i18n-key="footerPrivacy">Privacy Policy</a>
-                <a href="./" class="hover:text-white transition-colors" data-i18n-key="footerTerms">Terms & Conditions</a>
+                <a href="../terms-conditions/" class="hover:text-white transition-colors" data-i18n-key="footerTerms">Terms & Conditions</a>
+                <a href="../sources/" class="hover:text-white transition-colors" data-i18n-key="footerSources">Data Sources</a>
             </div>
             <p class="text-sm" data-i18n-key="footerProductOf">A product of Skeep Technologies (Pty) Ltd.</p>
             <p class="text-sm mt-2" data-i18n-key="footerCopyright">&copy; 2025 TravelHawk. All rights reserved.</p>
         </div>
     </footer>
-    
+
     <script>
         window.addEventListener('DOMContentLoaded', () => {
             lucide.createIcons();
